# vaulttool

./: .gitignore  .pre-commit-config.yaml  .vaulttool.yml  .vaulttool.yml.example  CHANGELOG.md  CI_WORKFLOW_SETUP_COMPLETE.md  README.md  demo_logging.py  example.vaulttool.yml  pipx-requirements.txt  pyproject.toml  requirements.txt  vaulttool-generate-key.sh  wip_pre-commit.yml
.github/: PYPI_RELEASE_WORKFLOW.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  feature_request.yml  general_issue.yml
.github/workflows/: ci.yml  pre-commit.yml  release.yml
docs/: CHANGELOG.md  GENERATE_KEY_FEATURE.md  GITHUB_ACTIONS_CI.md  ISSUE_TEMPLATES_IMPLEMENTATION.md  PYPI_RELEASE_WORKFLOW.md  README.md  RELEASE_v2.0.1.md
tests/: test_core.py
vaulttool/: __main__.py  cli.py  config.py  core.py  crypto.py  utils.py
vaulttool/tests/: test_checksum_trigger.py  test_core.py  test_crypto.py  test_decrypt_missing_sources.py  test_gitignore.py  test_main_integration.py  test_utils.py
